--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ const members = {
       { text: "Midterm HOA", href: "https://drive.google.com/drive/folders/1cW95GzMtuWdPEJaxHMPwT-zMRG2NKHmV?usp=drive_link" },
       { text: "Finals HOA", href: "https://drive.google.com/drive/folders/1TwoUSiFUt_pauVmFK86wl0NW9KOTatvs?usp=drive_link" },
       { text: "Prelim Exam", href: "https://github.com/KYLIDRE" },
-      { text: "Midterm Exam", href: "https://github.com/juichigatsu" },
+      { text: "Midterm Exam", href: "https://github.com/juichigatsu/CPE_MIDEXAM_LACORTE" },
       { text: "Final Exam", href: "#notyet" },
       { text: "Learnings & Reflection", href: "#notyet" }
     ]
