--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ const members = {
       { text: "Prelim Exam", href: "https://github.com/JestherCarbonera/Carbonera_PrelimExam" },
       { text: "Midterm Exam", href: "https://github.com/JestherCarbonera/CPE212_MidtermExam"},
       { text: "Final Exam", href: "#notyet" },
-      { text: "Learnings & Reflection", href: "#notyet" }
+      { text: "Learnings & Reflection", href: "https://drive.google.com/file/d/1LI07ya2pNptwi_hNV3ff3keG8scS5c5-/view?usp=sharing" }
     ]
   },
   Kyla: {
@@ -239,7 +239,7 @@ const members = {
       { text: "Prelim Exam", href: "https://github.com/KYLIDRE" },
       { text: "Midterm Exam", href: "https://github.com/juichigatsu/CPE_MIDEXAM_LACORTE" },
       { text: "Final Exam", href: "#notyet" },
-      { text: "Learnings & Reflection", href: "#notyet" }
+      { text: "Learnings & Reflection", href: "https://drive.google.com/file/d/1fxkhqMNP34eAXi-7RjMMuRX4OPSsscGc/view?usp=sharing" }
     ]
   },
   Renmar: {
@@ -252,7 +252,7 @@ const members = {
       { text: "Prelim Exams", href: "https://github.com/rkVirtudez" },
       { text: "Midterm Exams", href: "https://github.com/rkVirtudez"},
       { text: "Final Exams", href: "#notyet" },
-      { text: "Learnings & Reflection", href: "#notyet" }
+      { text: "Learnings & Reflection", href: "https://drive.google.com/file/d/1uySWWRFAYZO5fzJhSVaBeigz-_sc7UW9/view?usp=sharing" }
     ]
   }
 };
